<resources>
    <string name="app_name" translatable="false">CHILD SECURITY SYSTEM</string>

    <!-- Strings related to login -->
    <string name="prompt_email" translatable="false">Email</string>
    <string name="prompt_password" translatable="false">Password </string>
    <string name="action_sign_in" translatable="false">Sign in </string>
    <string name="action_reg_in"> register</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_my">Location</string>
    <string name="title_activity_about">About us</string>
    <string name="title_activity_contact">Path</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_map">Map</string>
    <string name="back">back</string>
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get registered in Firebase now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="description">Now a days 80% of people in the world having
smart phones the smart phones uses the people by
different purposes. The major issue of child missing
can be solved with the help of child tracking system
android application. .</string>
    <string name="home">This Home Activity helped to know the current loacation of children.
        This is the Google map Activity and there are two Marker which showing the Current
        location of children and Home location/or your loaction. </string>
    <string name="title">Child Tracking System Using Cloud Computing.</string>
    <string name="plse">Heart Rate Activity which showing Child plase rate in a from of graph. application
        fetch every second pluse rate from cluod, Iot device got palse rate every second and store in Cloud.</string>
    <string name="path"> This is also the Map Activity and help to know the way/path of children.
        In this map we checked th old path of children it is helpful to know the all the action of children.</string>
</resources>
