<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="fill_parent"
android:layout_height="wrap_content"
android:orientation="vertical"
android:fillViewport="false"
    xmlns:tools="http://schemas.android.com/tools"
tools:context="com.example.sourabh_.childtrackingsystem.AboutActivity">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:layout_marginBottom="20dp"
    android:orientation="vertical">
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:scaleType="centerCrop"
        android:src="@drawable/pic2" />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="child tracking system" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:layout_marginBottom="10dp"
        android:textSize="16dp"
        android:textAppearance="?android:attr/textAppearanceSmall" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:src="@drawable/treck" />
        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="Home Activity"
            android:textSize="22dp"
            android:gravity="fill_vertical"
            android:textStyle="bold"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </LinearLayout>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/home"
            android:textSize="16dp"
            android:layout_marginBottom="10dp"
            android:textAppearance="?android:attr/textAppearanceSmall" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:src="@drawable/locationpath" />
        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="Path Activity"
            android:textSize="22dp"
            android:gravity="fill_vertical"
            android:textStyle="bold"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/path"
        android:textSize="16dp"
        android:layout_marginBottom="10dp"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:src="@drawable/heartrate" />
        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="HeartRate Activity"
            android:textSize="22dp"
            android:gravity="fill_vertical"
            android:textStyle="bold"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/plse"
        android:textSize="16dp"
        android:layout_marginBottom="10dp"
        android:textAppearance="?android:attr/textAppearanceSmall" />

</LinearLayout>
</ScrollView>
